# cpp-template-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: template.cpp  template.hpp
tests/: test_template.cpp
